<resources>
    <string name="app_name">PokeMundo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="result_ok">certo!</string>
    <string name="result_error">errou!</string>
    <string name="detail_addfavorites">adicionado aos favoritos!</string>
    <string name="detail_remfavorites">removido dos favoritos!</string>
    <string name="detail_pokedexdh">--- PokeMundo ---</string>
    <string name="detail_sharewith">Compartilhar com:</string>
    <string name="detail_noapp">Sem App disponível</string>
    <string name="about_terms">Termos de uso</string>
    <string name="about_readterms">Ler termos de serviço</string>
    <string name="about_version">Versão</string>
    <string name="menu_home">Início</string>
    <string name="menu_favorites">Favoritos</string>
    <string name="menu_game">Game</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">Sobre</string>
    <string name="result_next">Próximo</string>
    <string name="result_exit">Saída</string>
    <string name="login_email">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_remember">Lembrar</string>
    <string name="login_login">Login</string>
    <string name="login_google">Google</string>
    <string name="login_register_now">Registrar agora</string>
    <string name="favorite_notfound">Favoritos não encontrados!</string>
    <string name="register_emailerror_a">E-mail não informado :(</string>
    <string name="register_emailerror_b">E-mail inválido :(</string>
    <string name="register_passerror_a">Senha não pode ser vazia  :(</string>
    <string name="register_passerror_b">Senhas devem ter pelo menos 6 caracteres  :(</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="busca">Busca</string>
</resources>
